--- a/index.html
+++ b/index.html
@@ -13,110 +13,124 @@
             <span class="current-time"></span>
             <span class="current-date"></span>
         </div>
-        <div id="alarm-details">
-            <label for="hours-label" class="alarm-details-child">Hours</label>
-            <label for="min-label" class="alarm-details-child">Minutes</label>
-            <select name="hours" id="hours" class="alarm-details-child">
-                <option value="00">00</option>
-                <option value="01">01</option>
-                <option value="02">02</option>
-                <option value="03">03</option>
-                <option value="04">04</option>
-                <option value="05">05</option>
-                <option value="06">06</option>
-                <option value="07">07</option>
-                <option value="08">08</option>
-                <option value="09">09</option>
-                <option value="10">10</option>
-                <option value="11">11</option>
-                <option value="12">12</option>
-                <option value="13">13</option>
-                <option value="14">14</option>
-                <option value="15">15</option>
-                <option value="16">16</option>
-                <option value="17">17</option>
-                <option value="18">18</option>
-                <option value="19">19</option>
-                <option value="20">20</option>
-                <option value="21">21</option>
-                <option value="22">22</option>
-                <option value="23">23</option>
-            </select>
-            <select name="minutes" id="minutes" class="alarm-details-child">
-                <option value="00">00</option>
-                <option value="01">01</option>
-                <option value="02">02</option>
-                <option value="03">03</option>
-                <option value="04">04</option>
-                <option value="05">05</option>
-                <option value="06">06</option>
-                <option value="07">07</option>
-                <option value="08">08</option>
-                <option value="09">09</option>
-                <option value="10">10</option>
-                <option value="11">11</option>
-                <option value="12">12</option>
-                <option value="13">13</option>
-                <option value="14">14</option>
-                <option value="15">15</option>
-                <option value="16">16</option>
-                <option value="17">17</option>
-                <option value="18">18</option>
-                <option value="19">19</option>
-                <option value="20">20</option>
-                <option value="21">21</option>
-                <option value="22">22</option>
-                <option value="23">23</option>
-                <option value="24">24</option>
-                <option value="25">25</option>
-                <option value="26">26</option>
-                <option value="27">27</option>
-                <option value="28">28</option>
-                <option value="29">29</option>
-                <option value="30">30</option>
-                <option value="31">31</option>
-                <option value="32">32</option>
-                <option value="33">33</option>
-                <option value="34">34</option>
-                <option value="35">35</option>
-                <option value="36">36</option>
-                <option value="37">37</option>
-                <option value="38">38</option>
-                <option value="39">39</option>
-                <option value="40">40</option>
-                <option value="41">41</option>
-                <option value="42">42</option>
-                <option value="43">43</option>
-                <option value="44">44</option>
-                <option value="45">45</option>
-                <option value="46">46</option>
-                <option value="47">47</option>
-                <option value="48">48</option>
-                <option value="49">49</option>
-                <option value="50">50</option>
-                <option value="51">51</option>
-                <option value="52">52</option>
-                <option value="53">53</option>
-                <option value="54">54</option>
-                <option value="55">55</option>
-                <option value="56">56</option>
-                <option value="57">57</option>
-                <option value="58">58</option>
-                <option value="59">59</option>
-            </select>
-            <label for="sound" class="alarm-details-child">Alarm Sound</label>
-            <label for="snooze" class="alarm-details-child">Snooze</label>
-            <select name="sound" id="sound" class="alarm-details-child">
-                <option value="sound1">Sound 1</option>
-                <option value="sound2">Sound 2</option>
-                <option value="sound3">Sound 3</option>
-            </select>
-            <select name="snooze" id="snooze" class="alarm-details-child">
-                <option value="off">Off</option>
-                <option value="5min">5 min</option>
-                <option value="10min">10 min</option>
-            </select>
-            <button type="submit" class="alarm-details-child" id="set-alarm">Add an Alarm</button>
+        <form >
+            <div id="alarm-details">
+                <label for="alarm-name" class="alarm-details-child-lg">Alarm Name</label>
+                <input type="text" placeholder="Enter alarm name" class="alarm-details-child-lg">
+                <label for="hours-label" class="alarm-details-child-md">Hours</label>
+                <label for="min-label" class="alarm-details-child-md">Minutes</label>
+                <select name="hours" id="hours" class="alarm-details-child-md" required>
+                    <option value="" selected disabled>Select hour</option>
+                    <option value="00">00</option>
+                    <option value="01">01</option>
+                    <option value="02">02</option>
+                    <option value="03">03</option>
+                    <option value="04">04</option>
+                    <option value="05">05</option>
+                    <option value="06">06</option>
+                    <option value="07">07</option>
+                    <option value="08">08</option>
+                    <option value="09">09</option>
+                    <option value="10">10</option>
+                    <option value="11">11</option>
+                    <option value="12">12</option>
+                    <option value="13">13</option>
+                    <option value="14">14</option>
+                    <option value="15">15</option>
+                    <option value="16">16</option>
+                    <option value="17">17</option>
+                    <option value="18">18</option>
+                    <option value="19">19</option>
+                    <option value="20">20</option>
+                    <option value="21">21</option>
+                    <option value="22">22</option>
+                    <option value="23">23</option>
+                </select>
+                <select name="minutes" id="minutes" class="alarm-details-child-md" required>
+                    <option value="" selected disabled>Select minutes</option>
+                    <option value="00">00</option>
+                    <option value="01">01</option>
+                    <option value="02">02</option>
+                    <option value="03">03</option>
+                    <option value="04">04</option>
+                    <option value="05">05</option>
+                    <option value="06">06</option>
+                    <option value="07">07</option>
+                    <option value="08">08</option>
+                    <option value="09">09</option>
+                    <option value="10">10</option>
+                    <option value="11">11</option>
+                    <option value="12">12</option>
+                    <option value="13">13</option>
+                    <option value="14">14</option>
+                    <option value="15">15</option>
+                    <option value="16">16</option>
+                    <option value="17">17</option>
+                    <option value="18">18</option>
+                    <option value="19">19</option>
+                    <option value="20">20</option>
+                    <option value="21">21</option>
+                    <option value="22">22</option>
+                    <option value="23">23</option>
+                    <option value="24">24</option>
+                    <option value="25">25</option>
+                    <option value="26">26</option>
+                    <option value="27">27</option>
+                    <option value="28">28</option>
+                    <option value="29">29</option>
+                    <option value="30">30</option>
+                    <option value="31">31</option>
+                    <option value="32">32</option>
+                    <option value="33">33</option>
+                    <option value="34">34</option>
+                    <option value="35">35</option>
+                    <option value="36">36</option>
+                    <option value="37">37</option>
+                    <option value="38">38</option>
+                    <option value="39">39</option>
+                    <option value="40">40</option>
+                    <option value="41">41</option>
+                    <option value="42">42</option>
+                    <option value="43">43</option>
+                    <option value="44">44</option>
+                    <option value="45">45</option>
+                    <option value="46">46</option>
+                    <option value="47">47</option>
+                    <option value="48">48</option>
+                    <option value="49">49</option>
+                    <option value="50">50</option>
+                    <option value="51">51</option>
+                    <option value="52">52</option>
+                    <option value="53">53</option>
+                    <option value="54">54</option>
+                    <option value="55">55</option>
+                    <option value="56">56</option>
+                    <option value="57">57</option>
+                    <option value="58">58</option>
+                    <option value="59">59</option>
+                </select>
+                <label for="sound" class="alarm-details-child-md">Alarm Sound</label>
+                <label for="snooze" class="alarm-details-child-md">Snooze</label>
+                <select name="sound" id="sound" class="alarm-details-child-md">
+                    <option value="sound1">Sound 1</option>
+                    <option value="sound2">Sound 2</option>
+                    <option value="sound3">Sound 3</option>
+                </select>
+                <select name="snooze" id="snooze" class="alarm-details-child-md">
+                    <option value="off">Off</option>
+                    <option value="5min">5 min</option>
+                    <option value="10min">10 min</option>
+                </select>
+                <button type="submit" class="alarm-details-child-md mt-30 set-alarm">Add an Alarm</button>
+            </div>
+        </form>
+        <div class="alarm-list">
+            <div class="alarm-list-item">
+                <span>Alarm Name</span>
+                <span class="alarm-time">23:00</span>
+                <span>06hr 14min 00s left </span>
+                <button class="set-alarm">Stop alarm</button>
+            </div>
         </div>
     </main>
     <script src="script.js"></script>
