--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <div id="alarm-details">
                 <label for="alarm-name" class="alarm-details-child-lg">Alarm Name</label>
                 <input type="text" placeholder="Enter alarm name" class="alarm-details-child-lg" id="alarm-name">
-                <label for="hours" class="alarm-details-child-md">Hours</label>
-                <label for="minutes" class="alarm-details-child-md">Minutes</label>
+                <label for="hours" class="alarm-details-child-md">Hours*</label>
+                <label for="minutes" class="alarm-details-child-md">Minutes*</label>
                 <select name="hours" id="hours" class="alarm-details-child-md" required>
                     <option value="" selected disabled>Select hour</option>
                     <option value="00">00</option>
@@ -123,6 +123,7 @@
                 </div>
                 <select name="snooze" id="snooze" class="alarm-details-child-md">
                     <option value="">Off</option>
+                    <option value="1">1 min</option>
                     <option value="5">5 min</option>
                     <option value="10">10 min</option>
                 </select>
@@ -130,13 +131,6 @@
             </div>
         </form>
         <div class="alarm-list">
-            <div class="alarm-list-item">
-                <span>Alarm Name</span>
-                <span class="alarm-time">23:00</span>
-                <span>06hr 14min 00s left </span>
-                <button class="set-alarm snooze-button">Stop alarm</button>
-                <button class="set-alarm">Stop alarm</button>
-            </div>
         </div>
     </main>
     <script src="script.js"></script>
